<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_control"
            android:icon="@drawable/outline_power_settings_new_24"
            android:title="@string/menu_control" />
        <item
            android:id="@+id/nav_manager"
            android:icon="@drawable/manage_accounts_24px"
            android:title="@string/menu_manager" />
    </group>
</menu>