<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mqtt.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.mqtt.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.mqtt.ui.notifications.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_control"
        android:name="com.example.mqtt.ui.control.ControlFragment"
        android:label="@string/menu_control"
        tools:layout="@layout/fragment_control" />

    <fragment
        android:id="@+id/nav_manager"
        android:name="com.example.mqtt.ui.manager.ManagerFragment"
        android:label="@string/menu_manager"
        tools:layout="@layout/fragment_manager" />

    <fragment
        android:id="@+id/nav_account_management"
        android:name="com.example.mqtt.ui.manager.AccountManagementFragment"
        android:label="Quản lý tài khoản"
        tools:layout="@layout/fragment_account_management" />

    <fragment
        android:id="@+id/nav_device_management"
        android:name="com.example.mqtt.ui.manager.DeviceManagementFragment"
        android:label="Quản lý thiết bị"
        tools:layout="@layout/fragment_device_management" />
</navigation>
